@@ -53,8 +53,9 @@ wajig (2.3) unstable; urgency=low
   * MADISON: get rid of duplicates from output, if any.
   * VERSION: Remove, since it's already provided by 'wajig --version'.
   * BUG, BUGREPORT, and REPORTBUG are all aliases, and they run reportbug
+  * Rename LISTRECOMMENDED --> RECOMMENDED
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 29 Feb 2012 13:33:03 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 29 Feb 2012 19:46:21 +0200
 
 wajig (2.2) unstable; urgency=low
 
